fix: resolve flag icon visibility by importing styles and removing deprecated syntax
- Import flags.scss in admin and survey main.ts files
- Remove deprecated tilde syntax from flag-icons URL paths
- Fixes flag icons not displaying in locale/language selectors

--- a/apps/admin/src/scss/flags.scss
+++ b/apps/admin/src/scss/flags.scss
@@ -1,5 +1,5 @@
 @import 'flag-icons/css/flag-icons.css';
 
 .fi-en {
-  background-image: url(~flag-icons/flags/4x3/gb.svg);
+  background-image: url(flag-icons/flags/4x3/gb.svg);
 }
